--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Using Bootstrap</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/reset.css">
+  <link rel="stylesheet" href="assets/">
   <link rel="stylesheet" href="assets/style.css">
   <link
     href="https://fonts.googleapis.com/css2?family=Marck+Script&amp;family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;display=swap"
@@ -27,15 +27,84 @@
         <img class="contain-logo" src="assets/logo.jpg" alt="">
       </div>
       <div class="subscribe-login col2 pb-lg-3 pb-1 d-flex align-items-center">
-        <p class="text-white d-md-none"><i class="fas fa-user-alt"></i></p>
-        <p class="text-white d-none d-md-block font-weight-bolder">Login</p>
+        <div class="text-white d-md-none"><i class="fas fa-user-alt"></i></div>
+        <div class="text-white d-none d-md-block font-weight-bolder">
+          Login
+        </div>
         <button class="mx-2 p-1 btn-warning font-weight-bolder subscribe">
           <b>SUBSCRIBE</b>
         </button>
-        <p class="text-white"><i class="fas fa-bars d-lg-none"></i></p>
+        <div class="text-white"><i class="fas fa-bars d-lg-none"></i><div>
       </div>
     </div>
   </header>
+  <nav class="d-lg-flex d-none justify-content-between align-items-center">
+    <div class="d-lg-block d-none h-100 w-100 header-deco">
+    <div class="w-100">
+      <ul class="d-flex justify-content-between align-items-center mt-2 header-list link-size-19 font-weight-bolder">
+        <li>
+          <a href="#" class="pr-3 border-right">U.S</a>
+        </li>
+        <li>
+          <a href="#" class="pr-3 border-right">World</a>
+        </li>
+        <li>
+          <a href="#" class="pr-3  border-right">Business</a>
+        </li>
+        <li>
+          <a href="#" class="nowrap pr-3  border-right">Tech&Science</a>
+        </li>
+        <li>
+          <a href="#" class="pr-3  border-right">Culture</a>
+        </li>
+        <li>
+          <a href="#" class="pr-3  border-right">Newsgeek</a>
+        </li>
+        <li>
+          <a href="#" class="pr-3  border-right">Sports</a>
+        </li>
+        <li>
+          <a href="#" class="pr-3  border-right">Health</a>
+        </li>
+        <li>
+          <a href="#" class="pr-3  border-right">The Debate</a>
+        </li>
+        <li>
+          <a href="#" class="pr-3  border-right">Experts</a>
+        </li>
+        <li>
+          <a href="#" class="pr-3  border-right">Vantage</a>
+        </li>
+        <li>
+          <a href="#" class="pr-3">Search</a>
+        </li>
+      </ul>
+    </div>
+    <div class="w-100">
+      <ul class="d-flex align-items-center mt-2 link-size-18 trending-list">
+        <li class="pl-3 font-weight-bolder">TRENDING</li>
+        <li class="pl-3 ml-3 font-weight-bold">
+          <a href="#">JOE BIDEN</a>
+        </li>
+        <li class="pl-3 ml-3 font-weight-bold">
+          <a href="#">DONALD TRUMP</a>
+        </li>
+        <li class="pl-3 ml-3 font-weight-bold">
+          <a href="#">CORONAVIRUS</a>
+        </li>
+        <li class="pl-3 ml-3 font-weight-bold">
+          <a href="#">STIMULUS PACKAGE</a>
+        </li>
+        <li class="pl-3 ml-3 font-weight-bold">
+          <a href="#">VACCINE</a>
+        </li>
+        <li class="pl-3 ml-3 font-weight-bold">
+          <a href="#">CAPITAL RIOTS</a>
+        </li>
+        
+      </ul>
+    </div>
+  </nav>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
   </script>
