create main containers for ld

--- a/index.html
+++ b/index.html
@@ -105,6 +105,15 @@
       </ul>
     </div>
   </nav>
+  <main>
+    <div class="row m-2">
+    <div class="test-box1 col-lg-6 col-md-6 col-sm-12 order-lg-2 order-md-1 h-100 w-100">a</div>
+    <div class="test-box2 col-lg-3 col-md-6 col-sm-12 order-lg-1 order-md-2 h-100 w-100">b</div>
+    <div class="test-box3 col-lg-3 col-md-12 col-sm-12 order-lg-3 order-md-3 h-100 w-100">c</div>
+    </div>
+  </main>
+
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
   </script>
