create main containers for ld

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <nav class="d-lg-flex d-none justify-content-between align-items-center">
     <div class="d-lg-block d-none h-100 w-100 header-deco">
     <div class="w-100">
-      <ul class="d-flex justify-content-between align-items-center mt-2 header-list link-size-19 font-weight-bolder">
+      <ul class="d-flex justify-content-between align-items-center mt-2 header-list text-size-19 font-weight-bolder">
         <li>
           <a href="#" class="pr-3 border-right">U.S</a>
         </li>
@@ -81,7 +81,7 @@
       </ul>
     </div>
     <div class="w-100">
-      <ul class="d-flex align-items-center mt-2 link-size-18 trending-list">
+      <ul class="d-flex align-items-center mt-2 text-size-18 trending-list">
         <li class="pl-3 font-weight-bolder">TRENDING</li>
         <li class="pl-3 ml-3 font-weight-bold">
           <a href="#">JOE BIDEN</a>
@@ -107,9 +107,15 @@
   </nav>
   <main>
     <div class="row m-2">
-    <div class="test-box1 col-lg-6 col-md-6 col-sm-12 order-lg-2 order-md-1 h-100 w-100">a</div>
-    <div class="test-box2 col-lg-3 col-md-6 col-sm-12 order-lg-1 order-md-2 h-100 w-100">b</div>
-    <div class="test-box3 col-lg-3 col-md-12 col-sm-12 order-lg-3 order-md-3 h-100 w-100">c</div>
+    <div class="col-lg-6 col-md-6 col-sm-12 order-lg-2 order-md-1">
+            
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 order-lg-1 order-md-2">
+      
+    </div>
+    <div class="col-lg-3 col-md-12 col-sm-12 order-lg-3 order-md-3">
+
+    </div>
     </div>
   </main>
 
