do more stories

--- a/index.html
+++ b/index.html
@@ -160,6 +160,153 @@
                 </article>
               </div>
             </div>
+            <div class="more-stories">
+              <h2 class="font-weight-bold mt-3 mb-1 gray-text">MORE STORIES</h2>
+              <article class="mt-1 d-flex">
+                <img class="mr-2" src="assets/more.png" alt="Trump">
+                <div>
+                  <h2 class="link-size-17">
+                    <a class="hover-red" href="#">
+                      Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                    </a>
+                  </h2>
+                  <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                    be considered a member of staff at the club.</p>
+                </div>
+              </article>
+              <article class="mt-1 d-flex">
+                <img class="mr-2" src="assets/more.png" alt="Trump">
+                <div>
+                  <h2 class="link-size-17">
+                    <a class="hover-red" href="#">
+                      Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                    </a>
+                  </h2>
+                  <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                    be considered a member of staff at the club.</p>
+                </div>
+              </article>
+              <article class="mt-1 d-flex">
+                <img class="mr-2" src="assets/more.png" alt="Trump">
+                <div>
+                  <h2 class="link-size-17">
+                    <a class="hover-red" href="#">
+                      Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                    </a>
+                  </h2>
+                  <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                    be considered a member of staff at the club.</p>
+                </div>
+              </article>
+              <article class="mt-1 d-flex">
+                <img class="mr-2" src="assets/more.png" alt="Trump">
+                <div>
+                  <h2 class="link-size-17">
+                    <a class="hover-red" href="#">
+                      Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                    </a>
+                  </h2>
+                  <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                    be considered a member of staff at the club.</p>
+                </div>
+              </article>
+              <article class="mt-1 d-flex">
+                <img class="mr-2" src="assets/more.png" alt="Trump">
+                <div>
+                  <h2 class="link-size-17">
+                    <a class="hover-red" href="#">
+                      Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                    </a>
+                  </h2>
+                  <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                    be considered a member of staff at the club.</p>
+                </div>
+              </article>
+              <article class="mt-1 d-flex">
+                <img class="mr-2" src="assets/more.png" alt="Trump">
+                <div>
+                  <h2 class="link-size-17">
+                    <a class="hover-red" href="#">
+                      Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                    </a>
+                  </h2>
+                  <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                    be considered a member of staff at the club.</p>
+                </div>
+              </article>
+              <article class="mt-1 d-flex">
+                <img class="mr-2" src="assets/more.png" alt="Trump">
+                <div>
+                  <h2 class="link-size-17">
+                    <a class="hover-red" href="#">
+                      Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                    </a>
+                  </h2>
+                  <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                    be considered a member of staff at the club.</p>
+                </div>
+              </article>
+              <article class="mt-1 d-flex">
+                <img class="mr-2" src="assets/more.png" alt="Trump">
+                <div>
+                  <h2 class="link-size-17">
+                    <a class="hover-red" href="#">
+                      Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                    </a>
+                  </h2>
+                  <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                    be considered a member of staff at the club.</p>
+                </div>
+              </article>
+              <article class="mt-1 d-flex">
+                <img class="mr-2" src="assets/more.png" alt="Trump">
+                <div>
+                  <h2 class="link-size-17">
+                    <a class="hover-red" href="#">
+                      Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                    </a>
+                  </h2>
+                  <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                    be considered a member of staff at the club.</p>
+                </div>
+              </article>
+              <article class="mt-1 d-flex">
+                <img class="mr-2" src="assets/more.png" alt="Trump">
+                <div>
+                  <h2 class="link-size-17">
+                    <a class="hover-red" href="#">
+                      Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                    </a>
+                  </h2>
+                  <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                    be considered a member of staff at the club.</p>
+                </div>
+              </article>
+              <article class="mt-1 d-flex">
+                <img class="mr-2" src="assets/more.png" alt="Trump">
+                <div>
+                  <h2 class="link-size-17">
+                    <a class="hover-red" href="#">
+                      Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                    </a>
+                  </h2>
+                  <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                    be considered a member of staff at the club.</p>
+                </div>
+              </article>
+              <article class="mt-1 d-flex">
+                <img class="mr-2" src="assets/more.png" alt="Trump">
+                <div>
+                  <h2 class="link-size-17">
+                    <a class="hover-red" href="#">
+                      Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                    </a>
+                  </h2>
+                  <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                    be considered a member of staff at the club.</p>
+                </div>
+              </article>
+            </div>
           </section>
         </section>
       </div>
