finish border news

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </div>
             <div class="more-stories">
               <h2 class="font-weight-bold mt-3 mb-1 gray-text">MORE STORIES</h2>
-              <article class="mt-1 d-flex">
+              <article class="pt-4 pb-3 border-news d-flex">
                 <img class="mr-2" src="assets/more.png" alt="Trump">
                 <div>
                   <h2 class="link-size-17">
@@ -174,7 +174,7 @@
                     be considered a member of staff at the club.</p>
                 </div>
               </article>
-              <article class="mt-1 d-flex">
+              <article class="pt-4 pb-3 border-news d-flex">
                 <img class="mr-2" src="assets/more.png" alt="Trump">
                 <div>
                   <h2 class="link-size-17">
@@ -186,7 +186,7 @@
                     be considered a member of staff at the club.</p>
                 </div>
               </article>
-              <article class="mt-1 d-flex">
+              <article class="pt-4 pb-3 border-news d-flex">
                 <img class="mr-2" src="assets/more.png" alt="Trump">
                 <div>
                   <h2 class="link-size-17">
@@ -198,7 +198,7 @@
                     be considered a member of staff at the club.</p>
                 </div>
               </article>
-              <article class="mt-1 d-flex">
+              <article class="pt-4 pb-3 border-news d-flex">
                 <img class="mr-2" src="assets/more.png" alt="Trump">
                 <div>
                   <h2 class="link-size-17">
@@ -210,7 +210,7 @@
                     be considered a member of staff at the club.</p>
                 </div>
               </article>
-              <article class="mt-1 d-flex">
+              <article class="pt-4 pb-3 border-news d-flex">
                 <img class="mr-2" src="assets/more.png" alt="Trump">
                 <div>
                   <h2 class="link-size-17">
@@ -222,7 +222,7 @@
                     be considered a member of staff at the club.</p>
                 </div>
               </article>
-              <article class="mt-1 d-flex">
+              <article class="pt-4 pb-3 border-news d-flex">
                 <img class="mr-2" src="assets/more.png" alt="Trump">
                 <div>
                   <h2 class="link-size-17">
@@ -234,7 +234,7 @@
                     be considered a member of staff at the club.</p>
                 </div>
               </article>
-              <article class="mt-1 d-flex">
+              <article class="pt-4 pb-3 border-news d-flex">
                 <img class="mr-2" src="assets/more.png" alt="Trump">
                 <div>
                   <h2 class="link-size-17">
@@ -246,7 +246,7 @@
                     be considered a member of staff at the club.</p>
                 </div>
               </article>
-              <article class="mt-1 d-flex">
+              <article class="pt-4 pb-3 border-news d-flex">
                 <img class="mr-2" src="assets/more.png" alt="Trump">
                 <div>
                   <h2 class="link-size-17">
@@ -258,7 +258,7 @@
                     be considered a member of staff at the club.</p>
                 </div>
               </article>
-              <article class="mt-1 d-flex">
+              <article class="pt-4 pb-3 border-news d-flex">
                 <img class="mr-2" src="assets/more.png" alt="Trump">
                 <div>
                   <h2 class="link-size-17">
@@ -270,7 +270,7 @@
                     be considered a member of staff at the club.</p>
                 </div>
               </article>
-              <article class="mt-1 d-flex">
+              <article class="pt-4 pb-3 border-news d-flex">
                 <img class="mr-2" src="assets/more.png" alt="Trump">
                 <div>
                   <h2 class="link-size-17">
@@ -282,7 +282,7 @@
                     be considered a member of staff at the club.</p>
                 </div>
               </article>
-              <article class="mt-1 d-flex">
+              <article class="pt-4 pb-3 border-news d-flex">
                 <img class="mr-2" src="assets/more.png" alt="Trump">
                 <div>
                   <h2 class="link-size-17">
@@ -294,7 +294,7 @@
                     be considered a member of staff at the club.</p>
                 </div>
               </article>
-              <article class="mt-1 d-flex">
+              <article class="pt-4 pb-3 d-flex">
                 <img class="mr-2" src="assets/more.png" alt="Trump">
                 <div>
                   <h2 class="link-size-17">
@@ -304,6 +304,108 @@
                   </h2>
                   <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
                     be considered a member of staff at the club.</p>
+                </div>
+              </article>
+            </div>
+            <div class="latest-news">
+              <h2 class="font-weight-bold mt-3 mb-1 gray-text">LATEST NEWS</h2>
+              <article class="pt-4 pb-3 border-news d-flex">
+                <img class="mr-2" src="assets/latest.png" alt="Trump">
+                <div>
+                  <h2 class="link-size-17">
+                    <a class="hover-red" href="#">
+                      Who Could Receive a Third Stimulus Check? Debate Could Lower Eligibility
+                    </a>
+                  </h2>
+                  <p>President Joe Biden won't negotiate on the $1,400 payment amount, but said he's open to reducing...</p>
+                </div>
+              </article>
+              <article class="pt-4 pb-3 border-news d-flex">
+                <img class="mr-2" src="assets/latest.png" alt="Trump">
+                <div>
+                  <h2 class="link-size-17">
+                    <a class="hover-red" href="#">
+                      Who Could Receive a Third Stimulus Check? Debate Could Lower Eligibility
+                    </a>
+                  </h2>
+                  <p>President Joe Biden won't negotiate on the $1,400 payment amount, but said he's open to reducing...</p>
+                </div>
+              </article>
+              <article class="pt-4 pb-3 border-news d-flex">
+                <img class="mr-2" src="assets/latest.png" alt="Trump">
+                <div>
+                  <h2 class="link-size-17">
+                    <a class="hover-red" href="#">
+                      Who Could Receive a Third Stimulus Check? Debate Could Lower Eligibility
+                    </a>
+                  </h2>
+                  <p>President Joe Biden won't negotiate on the $1,400 payment amount, but said he's open to reducing...</p>
+                </div>
+              </article>
+              <article class="pt-4 pb-3 border-news d-flex">
+                <img class="mr-2" src="assets/latest.png" alt="Trump">
+                <div>
+                  <h2 class="link-size-17">
+                    <a class="hover-red" href="#">
+                      Who Could Receive a Third Stimulus Check? Debate Could Lower Eligibility
+                    </a>
+                  </h2>
+                  <p>President Joe Biden won't negotiate on the $1,400 payment amount, but said he's open to reducing...</p>
+                </div>
+              </article>
+              <article class="pt-4 pb-3 border-news d-flex">
+                <img class="mr-2" src="assets/latest.png" alt="Trump">
+                <div>
+                  <h2 class="link-size-17">
+                    <a class="hover-red" href="#">
+                      Who Could Receive a Third Stimulus Check? Debate Could Lower Eligibility
+                    </a>
+                  </h2>
+                  <p>President Joe Biden won't negotiate on the $1,400 payment amount, but said he's open to reducing...</p>
+                </div>
+              </article>
+              <article class="pt-4 pb-3 border-news d-flex">
+                <img class="mr-2" src="assets/latest.png" alt="Trump">
+                <div>
+                  <h2 class="link-size-17">
+                    <a class="hover-red" href="#">
+                      Who Could Receive a Third Stimulus Check? Debate Could Lower Eligibility
+                    </a>
+                  </h2>
+                  <p>President Joe Biden won't negotiate on the $1,400 payment amount, but said he's open to reducing...</p>
+                </div>
+              </article>
+              <article class="pt-4 pb-3 border-news d-flex">
+                <img class="mr-2" src="assets/latest.png" alt="Trump">
+                <div>
+                  <h2 class="link-size-17">
+                    <a class="hover-red" href="#">
+                      Who Could Receive a Third Stimulus Check? Debate Could Lower Eligibility
+                    </a>
+                  </h2>
+                  <p>President Joe Biden won't negotiate on the $1,400 payment amount, but said he's open to reducing...</p>
+                </div>
+              </article>
+              <article class="pt-4 pb-3 border-news d-flex">
+                <img class="mr-2" src="assets/latest.png" alt="Trump">
+                <div>
+                  <h2 class="link-size-17">
+                    <a class="hover-red" href="#">
+                      Who Could Receive a Third Stimulus Check? Debate Could Lower Eligibility
+                    </a>
+                  </h2>
+                  <p>President Joe Biden won't negotiate on the $1,400 payment amount, but said he's open to reducing...</p>
+                </div>
+              </article>
+              <article class="pt-4 pb-3 d-flex">
+                <img class="mr-2" src="assets/latest.png" alt="Trump">
+                <div>
+                  <h2 class="link-size-17">
+                    <a class="hover-red" href="#">
+                      Who Could Receive a Third Stimulus Check? Debate Could Lower Eligibility
+                    </a>
+                  </h2>
+                  <p>President Joe Biden won't negotiate on the $1,400 payment amount, but said he's open to reducing...</p>
                 </div>
               </article>
             </div>
