add featured stories and make them sticky

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
   <main>
     <hr>
     <div class="row m-2">
-      <div class="col-lg-6 col-md-6 col-sm-12 order-lg-2 order-md-1">
+      <div class="col-lg-6 col-md-6 col-sm-12 order-lg-2 order-sm-1 order-md-2">
+        <div>
         <section class="top-stories">
           <div class="link-size-22 text-size-15">
             <h2 class="font-weight-bold gray-text">TOP STORY</h2>
@@ -411,15 +412,74 @@
             </div>
           </section>
         </section>
+        </div>
       </div>
-      <div class="col-lg-3 col-md-6 col-sm-12 order-lg-1 order-md-2">
-        <h2 class="font-weight-bold gray-text">TOP STORY</h2>
-
+      <div class="col-lg-3 col-md-6 col-sm-12 order-lg-1 order-sm-2 order-md-1">
+       <section class="sticky-top">
+        <h2 class="font-weight-bold gray-text">FEATURED STORIES</h2>
+        <article class="pb-1 border-news">
+          <img src="assets/featured.png" alt="Biden" class="w-100">
+          <h2 class="pt-1 pb-1">
+            <a href="#" class="hover-red">
+              Joe Biden Stands Firm on $1,400 Stimulus Check Amount, Flexible Who Gets It
+            </a>
+          </h2>
+          <p>The president has insisted he wants to "go big" on relief, but also wants to ensure bipartisan support for a further package.</p>
+        </article>
+        <article class="pt-1 pb-1 border-news">
+          <h2 class="fs-hover">
+            <a href="#">Stimulus Check Eligibility Cut Gains Momentum—Against Public's Wishes</a>            
+          </h2>
+        </article>
+        <article class="pt-1 pb-1 border-news">
+          <h2 class="fs-hover">
+            <a href="#">Joe Manchin Backs Lower Stimulus Check Income Limit as Biden Wobbles</a>            
+          </h2>
+        </article>
+        <article class="pb-1">
+          <img src="assets/featured.png" alt="Biden" class="w-100">
+          <h2 class="pt-1 pb-1">
+            <a href="#" class="hover-red">
+              Joe Biden Stands Firm on $1,400 Stimulus Check Amount, Flexible Who Gets It
+            </a>
+          </h2>
+          <p>The president has insisted he wants to "go big" on relief, but also wants to ensure bipartisan support for a further package.</p>
+        </article>
+        <article class="pb-1 border-news">
+          <img src="assets/featured.png" alt="Biden" class="w-100">
+          <h2 class="pt-1 pb-1">
+            <a href="#" class="hover-red">
+              Joe Biden Stands Firm on $1,400 Stimulus Check Amount, Flexible Who Gets It
+            </a>
+          </h2>
+          <p>The president has insisted he wants to "go big" on relief, but also wants to ensure bipartisan support for a further package.</p>
+        </article>
+        <article class="pb-1 border-news">
+          <img src="assets/featured.png" alt="Biden" class="w-100">
+          <h2 class="pt-1 pb-1">
+            <a href="#" class="hover-red">
+              Joe Biden Stands Firm on $1,400 Stimulus Check Amount, Flexible Who Gets It
+            </a>
+          </h2>
+          <p>The president has insisted he wants to "go big" on relief, but also wants to ensure bipartisan support for a further package.</p>
+        </article>
+        <article class="pb-1 border-news">
+          <img src="assets/featured.png" alt="Biden" class="w-100">
+          <h2 class="pt-1 pb-1">
+            <a href="#" class="hover-red">
+              Joe Biden Stands Firm on $1,400 Stimulus Check Amount, Flexible Who Gets It
+            </a>
+          </h2>
+          <p>The president has insisted he wants to "go big" on relief, but also wants to ensure bipartisan support for a further package.</p>
+        </article>
+       </section>
       </div>
       <div class="col-lg-3 col-md-12 col-sm-12 order-lg-3 order-md-3">
 
       </div>
     </div>
+    
+
   </main>
 
 
